--- a/will-core/pom.xml
+++ b/will-core/pom.xml
@@ -9,6 +9,7 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
+  <groupId>com.will</groupId>
   <artifactId>will-core</artifactId>
   <packaging>jar</packaging>
 
